Fixed past projects section
Edited description for projects, removed extra space between next section

--- a/my-app/src/components/Projects/projects.css
+++ b/my-app/src/components/Projects/projects.css
@@ -2,7 +2,7 @@
     width: 100vw;
     max-width: 60rem;
     margin: 0 auto;
-    margin-bottom: 20rem;
+    margin-bottom: 5rem;
     text-align: center;
     display: flex;
     align-items: center;
